@@ -13,6 +13,10 @@ devscripts (2.16.3) UNRELEASED; urgency=medium
     (as of 2016-04-02) listed on buildd.debian.org
   * Support xz compressed files in dd-list
 
+  [ Christoph Berg ]
+  * origtargz: Clarify manpage about when the tarball is unpacked.
+    (Closes: #820494)
+
  -- James McCoy <jamessan@debian.org>  Sun, 20 Mar 2016 12:26:04 -0400
 
 devscripts (2.16.2) unstable; urgency=medium
